--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2269,6 +2269,14 @@
 					font-size: 1.25em;
 				}
 
+				ul.icons li .icon:before {
+					font-size: 1.25em;
+				}
+
+				.contato {
+					font-size: 3.25em;
+				}
+
 		ul.actions {
 			cursor: default;
 			list-style: none;
